--- a/Assist/app/src/main/res/values/strings.xml
+++ b/Assist/app/src/main/res/values/strings.xml
@@ -18,14 +18,11 @@
     <string name="template">Template</string>
     <string name="notif_time">Notification Time</string>
 
-    <string name="sample1">Grade 5 - Service</string>
-    <string name="sample2">Grade 6 - Courtesy</string>
+    <string name="next_arrow">❯❯❯</string>
+    <string name="prev_arrow">❮❮❮</string>
+
     <string name="add_event">Add Event</string>
 
     <string name="not_saved">Error: Item not saved</string>
 
-    <string-array name="sample_groups">
-        <item>@string/sample1</item>
-        <item>@string/sample2</item>
-    </string-array>
 </resources>
